--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # .env.example
 
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=XXXX
 DB_NAME=moviesdb
-DB_USER=secureuser
-DB_PASSWORD=securepass
+DB_USER=XXXXX
+DB_PASSWORD=XXXX
 
 # Optional FastAPI settings
 APP_ENV=development
